2004-02-21  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b47

	* Fixed an issue introduced in b45 where the config wizard would step 
	  on local changes made in gallery/.htaccess

2004-02-21  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-b46

	* Removed test.php

2004-02-21  Christian Mohn  <ch-moh@online.no> 1.4.3-cvs-b45

        * Fixed bug #818376: Bad-rewrite rule in setup/write.inc when 
	  Gallery installed in webroot folder. 
	  Thanks to sgartner for the fixed code.

	* Fixed bad date in ChangeLog entry for 1.4.3-cvs-b34

2004-02-21  Christian Mohn  <ch-moh@online.no> 1.4.3-cvs-b44

        * Changed wrong image height in navphoto.inc
          The table cell height was set to 28, and not 18. This only
	  affected the first photo page in an album.
	  Reported by autobulb in the forums.

2004-02-20  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b43

	* Added integration for Mambo CMS <www.mamboserver.com>.
	  Left todo for integration:
	    - Install/config. documentation
	    - Check for minimum Gallery/Mambo versions

2004-02-18  Christian Mohn  <ch-moh@online.no> 1.4.3-cvs-b42

        * Added missing GALLERY_CONFDIR="." in configure.sh
	  Thanks to Luka Kladric for reporting

2004-02-18  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-cvs-b41

	* Fixed Bug #844125: missing CSS class in login.php. (Fix by
	  cryptographite)

	* Fixed Bug #885369: search.php is now disabled for non-admins if the
	  search engine is disabled in the Config. Wizard. Previously, the page
	  was merely hidden, but still worked if linked to directly. (Fix by
	  cryptographite)

2004-02-18  Andrew Lindeman <joyoflinux@yahoo.com> 1.4.3-cvs-b40
	
	* Rewrote the setup/ghcc.php script.  It's still not linked from
	  anywhere just yet.

2004-02-18  Don Willingham <donwillingh@users.sourceforge.net> 1.4.3-cvs-b39
	* Change: html_wrap/inline_imagewrap.inc in response to sf.net bug
	          #890804 titled "exposed php variable in inline_imagewrap.inc"