@@ -1,3 +1,13 @@
+2004-02-21  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b48
+
+	* Added GALLERY_CONFDIR to secure.sh, changed "htaccess" to ".htaccess"
+	  so that it actually changes the modes on the right file
+
+	* Fixed permissions issue in configure.sh where we were setting
+	  config.php and .htaccess to the wrong modes (755), changed "htaccess"
+	  to ".htaccess" so that it actually changes the modes on the right
+	  file
+
 2004-02-21  Bharat Mediratta  <bharat@menalto.com> 1.4.3-cvs-b47
 
 	* Fixed an issue introduced in b45 where the config wizard would step 
